--- a/manifold/manifold_refs.bib
+++ b/manifold/manifold_refs.bib
@@ -18,3 +18,13 @@
   year={1985},
   publisher={IEEE}
 }
+@article{davis1980comparison,
+  title={Comparison of parametric representations for monosyllabic word recognition in continuously spoken sentences},
+  author={Davis, Steven and Mermelstein, Paul},
+  journal={IEEE transactions on acoustics, speech, and signal processing},
+  volume={28},
+  number={4},
+  pages={357--366},
+  year={1980},
+  publisher={IEEE}
+}
